/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -150,8 +150,8 @@ We have
 
 ### a
 
-**Lemma:** 
-$(f \ast g)' = f \ast g' = f' \ast g$ almost everywhere.
+**Lemma:** If $g$ is differentiable, then
+$(f \ast g)' = f \ast g'$ almost everywhere.
 
 *Silly Proof:*
 
@@ -171,11 +171,17 @@ $(f \ast g)' = f \ast g' = f' \ast g$ almost everywhere.
 \begin{align*}
 (f\ast g)'(x)
 &= \lim_{h\to 0} \frac{(f\ast g)'(x+h) - (f\ast g)'(x)}{h} \\
-&= \lim_{h\to 0} \frac 1 h \int \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
-&\overset{DCT}=  \int \lim_{h\to 0} \frac 1 h \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
+&= \lim_{h\to 0} \int \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
+&\overset{DCT}=  \int \lim_{h\to 0} \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
+&= \int f'(x-y) g(y) \\
+&= (f' \ast g)(x)
 .\end{align*}
  
 
- To see that the DCT is justified,
+ To see that the DCT is justified, we can apply the MVT on the interval $[0, h]$ to $f$ to obtain
 
+\begin{align*}
+\frac{f(x + h - y) - f(x - y)}{h} g(y)
+&= f'(c)g(y)
+,\end{align*}
  
