/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -150,31 +150,33 @@ We have
 
 ### a
 
-**Lemma:** If $g$ is differentiable, then
-$(f \ast g)' = f \ast g'$ almost everywhere.
+**Lemma:** If $\phi \in C_c^1$, then
+$(f \ast \phi)' = f \ast \phi'$ almost everywhere.
 
 *Silly Proof:*
 
 \begin{align*}
 \mathcal{F}(
-	(f \ast g)'
+	(f \ast \phi)'
  )
-&= 2\pi i \xi ~\mathcal{F}(f\ast g) \\
-&= 2\pi i \xi ~ \mathcal{F}(f) ~ \mathcal{F}(g) \\
-&= \mathcal{F}(f) \cdot \left( 2\pi i \xi ~\mathcal{F}(g)\right) \\
-&= \mathcal{F}(f) \cdot \mathcal{F}(g') \\
-&= \mathcal{F}(f\ast g')
+&= 2\pi i \xi ~\mathcal{F}(f\ast \phi) \\
+&= 2\pi i \xi ~ \mathcal{F}(f) ~ \mathcal{F}(\phi) \\
+&= \mathcal{F}(f) \cdot \left( 2\pi i \xi ~\mathcal{F}(\phi)\right) \\
+&= \mathcal{F}(f) \cdot \mathcal{F}(\phi') \\
+&= \mathcal{F}(f\ast \phi')
 .\end{align*}
 
 *Actual proof*
 
 \begin{align*}
-(f\ast g)'(x)
-&= \lim_{h\to 0} \frac{(f\ast g)'(x+h) - (f\ast g)'(x)}{h} \\
-&= \lim_{h\to 0} \int \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
-&\overset{DCT}=  \int \lim_{h\to 0} \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
-&= \int f'(x-y) g(y) \\
-&= (f' \ast g)(x)
+(f\ast \phi)'(x)
+&= (\phi\ast f)'(x) \\
+&= \lim_{h\to 0} \frac{(\phi\ast f)'(x+h) - (\phi\ast f)'(x)}{h} \\
+&= \lim_{h\to 0} \int \frac{\phi(x + h - y) - \phi(x - y)}{h} f(y) \\
+&\overset{DCT}=  \int \lim_{h\to 0} \frac{\phi(x + h - y) - \phi(x - y)}{h} f(y) \\
+&= \int \phi'(x-y) f(y) \\
+&= (\phi' \ast f)(x) \\
+&= (f \ast \phi')(x)
 .\end{align*}
  
 
