/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -183,7 +183,8 @@ $(f \ast \phi)' = f \ast \phi'$ almost everywhere.
  To see that the DCT is justified, we can apply the MVT on the interval $[0, h]$ to $f$ to obtain
 
 \begin{align*}
-\frac{f(x + h - y) - f(x - y)}{h} g(y)
-&= f'(c)g(y)
+\frac{\phi(x + h - y) - \phi(x - y)}{h}
+&= \phi'(c)
 ,\end{align*}
  
+and since $\phi'$ is continuous and compact supported
