/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -187,4 +187,4 @@ $(f \ast \phi)' = f \ast \phi'$ almost everywhere.
 &= \phi'(c)
 ,\end{align*}
  
-and since $\phi'$ is continuous and compact supported
+and since $\phi'$ is continuous and compactly supported, $\phi'$ is bounded almost everywhere
