/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -184,7 +184,7 @@ $(f \ast \phi)' = f \ast \phi'$ almost everywhere.
 
 \begin{align*}
 \frac{\phi(x + h - y) - \phi(x - y)}{h}
-&= \phi'(c)
+&= \phi'(c) \quad c\in [0, h]
 ,\end{align*}
  
-and since $\phi'$ is continuous and compactly supported, $\phi'$ 
+and since $\phi'$ is continuous and compactly supported, $\phi'$ is uniformly bounded by some $M < \infty$ and thus
