--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -189,7 +189,12 @@ $(f \ast \phi)' = f \ast \phi'$ almost everywhere.
  
 and since $\phi'$ is continuous and compactly supported, $\phi'$ is uniformly bounded by some $M < \infty$ and thus
 \begin{align*}
-\int \abs{\frac{\phi(x + h - y) - \phi(x - y)}{h} f(y)} \leq \int \abs{M}\abs{f} = \abs{M} \int \abs{f} < \infty,
+\int \abs{\frac{\phi(x + h - y) - \phi(x - y)}{h} f(y)} 
+&= \int \abs{\phi'(c) f(y)} \\
+&\leq \int \abs{M}\abs{f} \\
+&= \abs{M} \int \abs{f} < \infty
 ,\end{align*}
 
 since $f\in L^1$ by assumption, so we can take $g\definedas \abs{M} \abs{f}$ as the dominating function.
+
+
