--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -197,5 +197,9 @@ and since $\phi'$ is continuous and compactly supported, $\phi'$ is uniformly bo
 
 since $f\in L^1$ by assumption, so we can take $g\definedas \abs{M} \abs{f}$ as the dominating function.
 
+Applying this theorem infinitely many times shows that $f\ast g$ is smooth.
+
+To see that $f\ast g$ is compactly supported,
+
 
 ### b
