/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -166,7 +166,7 @@ $(f \ast \phi)' = f \ast \phi'$ almost everywhere.
 &= \mathcal{F}(f\ast \phi')
 .\end{align*}
 
-*Actual proof*
+*Actual proof*:
 
 \begin{align*}
 (f\ast \phi)'(x)
