/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -197,9 +197,10 @@ and since $\phi'$ is continuous and compactly supported, $\phi'$ is uniformly bo
 
 since $f\in L^1$ by assumption, so we can take $g\definedas \abs{M} \abs{f}$ as the dominating function.
 
-Applying this theorem infinitely many times shows that $f\ast g$ is smooth.
+Applying this theorem infinitely many times shows that $f\ast \phi$ is smooth.
 
-To see that $f\ast g$ is compactly supported,
+To see that $f\ast \phi$ is compactly supported, choose $x$ large enough so that $x\not\in \mathrm{supp}(\phi)$; then
+
 
 
 ### b
