/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -200,6 +200,9 @@ since $f\in L^1$ by assumption, so we can take $g\definedas \abs{M} \abs{f}$ as 
 Applying this theorem infinitely many times shows that $f\ast \phi$ is smooth.
 
 To see that $f\ast \phi$ is compactly supported, choose $x$ large enough so that $x\not\in \mathrm{supp}(\phi)$; then
+\begin{align*}
+(f\ast \phi)(x) = \int \phi(x-y) f(y)~dy
+.\end{align*}
 
 
 
