/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -187,7 +187,7 @@ $(f \ast \phi)' = f \ast \phi'$ almost everywhere.
 &= \phi'(c) \quad c\in [0, h]
 ,\end{align*}
  
-and since $\phi'$ is continuous and compactly supported, $\phi'$ is uniformly bounded by some $M < \infty$ and thus
+and since $\phi'$ is continuous and compactly supported, $\phi'$ is bounded by some $M < \infty$ by the extreme value theorem and thus
 \begin{align*}
 \int \abs{\frac{\phi(x + h - y) - \phi(x - y)}{h} f(y)} 
 &= \int \abs{\phi'(c) f(y)} \\
