--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -201,7 +201,9 @@ Applying this theorem infinitely many times shows that $f\ast \phi$ is smooth.
 
 To see that $f\ast \phi$ is compactly supported, choose $x$ large enough so that $x\not\in \mathrm{supp}(\phi)$; then
 \begin{align*}
-(f\ast \phi)(x) = \int \phi(x-y) f(y)~dy
+(f\ast \phi)(x) 
+&= \int_\RR \phi(x-y) f(y)~dy \\
+&= \int_{x - \mathrm{supp}(g)} \phi(x-y) f(y)
 .\end{align*}
 
 
