/ ‘Class_Notes/2019/Analysis/sections/2019-10-29.md’

--- a/Class_Notes/2019/Analysis/sections/2019-10-29.md
+++ b/Class_Notes/2019/Analysis/sections/2019-10-29.md
@@ -22,7 +22,7 @@ $$
 **Theorem:**
 $C_c^\infty \injects L^1$ is dense,
 
-That is, $\forall \varepsilon > 0$ and for all $f\in L^1$, there exists a $g\in C_c^\infty$ such that $\norm{f - g}_1 < g$.
+That is, $\forall \varepsilon > 0$ and for all $f\in L^1$, there exists a $g\in C_c^\infty$ such that $\norm{f - g}_1 < \varepsilon$.
 
 *Proof:* 
 Since $C_c^0$ is dense in $L^1$, it suffices to show the following:
