/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -199,15 +199,24 @@ since $f\in L^1$ by assumption, so we can take $g\definedas \abs{M} \abs{f}$ as 
 
 Applying this theorem infinitely many times shows that $f\ast \phi$ is smooth.
 
-To see that $f\ast \phi$ is compactly supported, approximate $f$ by a *continuous* compactly supported function $h$, so $\norm{h - f}_1 \converges{L^1}\to 0$
+To see that $f\ast \phi$ is compactly supported, approximate $f$ by a *continuous* compactly supported function $h$, so $\norm{h - f}_1 \converges{L^1}\to 0$. 
 
-choose $x$ large enough so that $x\not\in \mathrm{supp}(\phi)$; then
+Now let $g_x(y) = \phi(x-y)$, and note that $\mathrm{supp}(g) = x - \mathrm{supp}(\phi)$ which is still compact.
+ 
+But since $\mathrm{supp}(h)$ is bounded, there is some $N$ such that 
+$$
+\abs{x} > N \implies A_x\definedas \mathrm{supp}(h) \intersect \mathrm{supp}(g_x) = \emptyset
+$$
+
+and thus 
 \begin{align*}
 (f\ast \phi)(x) 
 &= \int_\RR \phi(x-y) f(y)~dy \\
-&= \int_{x - \mathrm{supp}(g)} \phi(x-y) f(y)
-.\end{align*}
+&= \int_{A_x} \phi(x-y) f(y) \\
+&= 0
+,\end{align*}
 
+so $\mathrm{supp}(f\ast g)$ is clo
 
 ### b
 
