/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -210,9 +210,9 @@ $$
 
 and thus 
 \begin{align*}
-(f\ast \phi)(x) 
-&= \int_\RR \phi(x-y) f(y)~dy \\
-&= \int_{A_x} \phi(x-y) f(y) \\
+(h\ast \phi)(x) 
+&= \int_\RR \phi(x-y) h(y)~dy \\
+&= \int_{A_x} g_x(y) h(y) \\
 &= 0
 ,\end{align*}
 
