/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -220,5 +220,12 @@ so $\theset{x \suchthat f\ast g(x) = 0}$ is open, and its complement is closed a
 
 ### b
 
+\begin{align*}
+\norm{f\ast K_j - f}_1 
+&= \int \abs{\int f(x-y) K_j(y) ~dy  - f(x)}~dx \\
+&= \int \abs{\int f(x-y) K_j(y) ~dy  - \int f(x) K_j(y) ~ dy}~dx \\
+&= \int \abs{\int ( f(x-y) - f(x) ) K_j(y) ~dy } ~dx \\
+&\leq \int \int \abs{(f(x-y) - f(x))} \cdot \abs{K_j(y) ~ dy} ~dx
+.\end{align*}
 
 
