--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -228,7 +228,7 @@ so $\theset{x \suchthat f\ast g(x) = 0}$ is open, and its complement is closed a
 &\leq \int \int \abs{(f(x-y) - f(x))} \cdot \abs{K_j(y)} ~ dy~dx \\
 &\overset{FT}= \int \int \abs{(f(x-y) - f(x))} \cdot \abs{K_j(y)} \mathbf{~ dx~dy}\\
 &= \int \abs{K_j(y)} \left( \int \abs{(f(x-y) - f(x))}  ~ dx\right) ~dy \\
-&= \int \abs{K_j(y)} \norm
+&= \int \abs{K_j(y)} \norm{f }
 .\end{align*}
 
 
