/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -228,7 +228,11 @@ so $\theset{x \suchthat f\ast g(x) = 0}$ is open, and its complement is closed a
 &\leq \int \int \abs{(f(x-y) - f(x))} \cdot \abs{K_j(y)} ~ dy~dx \\
 &\overset{FT}= \int \int \abs{(f(x-y) - f(x))} \cdot \abs{K_j(y)} \mathbf{~ dx~dy}\\
 &= \int \abs{K_j(y)} \left( \int \abs{(f(x-y) - f(x))}  ~ dx\right) ~dy \\
-&= \int \abs{K_j(y)} \norm{f }
+&= \int \abs{K_j(y)} \cdot \norm{f - \tau_y f}_1 ~dy
 .\end{align*}
 
+We now split the integral up into pieces. 
+Chose $\delta$ such that
+
+1. 
 
