/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -232,8 +232,9 @@ so $\theset{x \suchthat f\ast g(x) = 0}$ is open, and its complement is closed a
 .\end{align*}
 
 We now split the integral up into pieces. 
-Chose $\delta$ such that
 
-1. $\abs{y} < \delta \implies \norm{f - \tau_y f}_1 < \varepsilon$ by continuity of translation in $L^1$, and
-2. $\abs{y} < \delta \implies 
+1. Chose $\delta$ small enough such that
+ $\abs{y} < \delta \implies \norm{f - \tau_y f}_1 < \varepsilon$ by continuity of translation in $L^1$, and
+
+2. Choose $J$ large enough $j > J \implies \int 
 
