/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -236,5 +236,9 @@ We now split the integral up into pieces.
 1. Chose $\delta$ small enough such that
  $\abs{y} < \delta \implies \norm{f - \tau_y f}_1 < \varepsilon$ by continuity of translation in $L^1$, and
 
-2. Choose $J$ large enough $j > J \implies \int 
+2. Since $\phi$ is compactly supported, choose $J$ large enough such that
+$$
+j > J \implies \int_{\abs{y} \geq \delta} \abs{K_j(y)} ~dy 
+= \int_{\abs{y} \geq \delta} \abs{j\phi(jy)} = 0
+$$
 
