/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -243,5 +243,11 @@ j > J \implies \int_{\abs{y} \geq \delta} \abs{K_j(y)} ~dy
 $$
 
 Then
+\begin{align*}
+\norm{f\ast K_j - f}_1 
+&\leq 
+&= \int \abs{K_j(y)} \cdot \norm{f - \tau_y f}_1 ~dy
+
+.\end{align*}
 
 
