/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -246,8 +246,12 @@ Then
 \begin{align*}
 \norm{f\ast K_j - f}_1 
 &\leq 
-&= \int \abs{K_j(y)} \cdot \norm{f - \tau_y f}_1 ~dy
-
+\int \abs{K_j(y)} \cdot \norm{f - \tau_y f}_1 ~dy \\
+&= \int_{\abs y < \delta} \abs{K_j(y)} \cdot \norm{f - \tau_y f}_1 ~dy 
++ \int_{\abs y \geq  \delta} \abs{K_j(y)} \cdot \norm{f - \tau_y f}_1 ~dy \\
+&= \varepsilon \int_{\abs y \geq  \delta} \abs{K_j(y)} + 0 \\
+&\leq \varepsilon(1) \to 0
 .\end{align*}
 
+$\qed$
 
