/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -262,5 +262,10 @@ Then for a fixed $x$, the sequence $f_k(x)$ is Cauchy in $\RR$ and thus converge
 
 Then $\norm{f_k - f} = \max_{x\in X}\abs{f_k(x) - f(x)} \converges{k\to\infty}\to 0$, it just remains to show that $f$ has bounded norm.
 
+Choose $N$ large enough so that $\norm{f - f_N} < \varepsilson$, and write $\norm{f_N} \definedas M < \infty$
+
+\begin{align*}
+\norm{f} \leq \norm{f - f_N} + \norm{f_N}
+.\end{align*}
 
 
