/ ‘Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md’

--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -14,6 +14,9 @@ But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 
 ### b
 
+Suppose $P$ is not contained in $M$; then $M < MP$ is a proper subgroup, and by maximality of $M$, $MP = G$.
+
+We can then write
 
 
 ## 2
