--- a/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
+++ b/Class_Notes/2019/Algebra/Review/Solutions/Fall2018.md
@@ -17,6 +17,13 @@ But then $P = gPg\inv \subseteq gS_p^i g\inv = S_p^j$.
 Suppose $P$ is not contained in $M$; then $M < MP$ is a proper subgroup, and by maximality of $M$, $MP = G$.
 
 We can then write
+\begin{align*}
+G = MP
+&\implies \abs{G} = \frac{\abs{M} \abs{P}}{\abs{M\intersect P}} \\ \\
+&\implies \abs{M\intersect P} \abs{G} = \abs{M} \abs{P} \\ \\
+&(?) \implies \abs{G} \text{ divides } \abs{M} \abs{P} \\ \\
+&\implies \abs{G} / \abs{M} \text{ divides } \abs{P}
+.\end{align*}
 
 
 ## 2
