--- a/Class_Notes/2019/Analysis/sections/2019-11-21.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-21.md
@@ -35,7 +35,7 @@ A measure is *$\sigma\dash$finite* iff $X = \union E_j$ with $m(E_j) < \infty$ f
   
   \begin{align*}
   \mu: \mathcal P(X) \to [0, \infty] \\
-  E \mapsto \sum_{n \suchthat x_n \in E} \mu_n
+  E \mapsto \sum_\theset{n \suchthat x_n \in E} \mu_n
   .\end{align*}
   
   In the special case $\mu_n = 1$ for all $n$, we have $\mu(E) = \# E$, the number of elements in $E$, which is the counting measure.
