/ ‘Class_Notes/2019/Analysis/sections/2019-11-21.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-21.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-21.md
@@ -118,7 +118,7 @@ $$
 
 Then if $f\in L^+$, we define 
 $$
-\int f d\mu = \sup \theset{\int \phi d\mu \suchthat 0\leq \phi \leq f, \phi\text{ is simple. }}
+\int f d\mu = \sup \theset{\int \phi ~d\mu \suchthat 0\leq \phi \leq f, \phi\text{ is simple. }}
 .$$
 
 For $f$ arbitrary and measurable, write $f = f_+ - f_-$, and define 
