/ ‘Class_Notes/2019/Analysis/sections/2019-11-21.md’

--- a/Class_Notes/2019/Analysis/sections/2019-11-21.md
+++ b/Class_Notes/2019/Analysis/sections/2019-11-21.md
@@ -113,7 +113,7 @@ We say two functions are *equal almost everywhere* if they disagree on a measure
 **Definition:**
 If $\phi$ is simple, i.e. $\phi = \sum_{j=1}^N a_j \chi_{E_j} \in L^+$ (is non-negative), then 
 $$
-\int \phi ~d\mu \definedas \sum a_j \mu(E_j)
+\int \phi ~d\mu \definedas \sum_j a_j \mu(E_j)
 .$$
 
 Then if $f\in L^+$, we define 
