/ ‘Class_Notes/2019/Algebra/CourseNotes.pdf’ / ‘Class_Notes/2019/Algebra/Review/Notes.pdf’ / ‘Class_Notes/2019/Algebra/Review/Notes_Fields.md’ / ‘Class_Notes/2019/Algebra/Review/Notes_Groups.md’ / ‘Class_Notes/2019/Algebra/Review/Notes_Modules.md’ / ‘Class_Notes/2019/Algebra/Review/Notes_Rings.md’ / ‘Class_Notes/2019/Algebra/sections/2019-10-29.md’ / ‘Class_Notes/2019/Algebra/sections/2019-11-07.md’ / ‘Class_Notes/2019/Algebra/sections/summary.md’ + ‘Class_Notes/2019/Algebra/CourseNotes.pre’ + ‘Class_Notes/2019/Algebra/CourseNotes.tex’ + ‘Class_Notes/2019/Algebra/CourseNotes.toc’ + ‘Class_Notes/2019/Algebra/Review/Notes_Fields.pdf’

--- a/Class_Notes/2019/Algebra/sections/2019-10-29.md
+++ b/Class_Notes/2019/Algebra/sections/2019-10-29.md
@@ -119,7 +119,7 @@ m\in M \implies m = \sum_{i=1}^n r_i x_i \quad \text{ for some }r_i \in R,~x_i \
 .$$
 
 **Definition:**
-A subset $X$ is a basis
+A subset $X$ is a basis $\iff$ it is a linearly independent spanning set.
 
 *Example:*
 $\ZZ_6$ is an abelian group and thus a $\ZZ\dash$module, but not free because $3 \actson [2] = [6] = 0$, so there are torsion elements.
