--- a/Class_Notes/2019/Algebra/sections/2019-11-07.md
+++ b/Class_Notes/2019/Algebra/sections/2019-11-07.md
@@ -15,13 +15,13 @@ M \arrow[rr, "g"] &  & N
 \end{center}
 ```
 
-i.e. there exists a $\phi: M \to N$ such that that $g \circ \phi = f$.
+i.e. for every surjective map $g:M \surjects N$ and every map $f: P \to N$ there exists a lift $\phi: P \to M$ such that that $g \circ \phi = f$.
 
 **Theorem**:
 Every free module is projective.
 
 *Proof:*
-Suppose $M \surjects N \to 0$ and $F \mapsvia{f}$, so we have the following situation:
+Suppose $M \surjects N \to 0$ and $F \mapsvia{f} N$, so we have the following situation:
 
 ```{=latex}
 \begin{center}
