/ ‘Class_Notes/2019/Algebra/sections/2019-08-15.md’

--- a/Class_Notes/2019/Algebra/sections/2019-08-15.md
+++ b/Class_Notes/2019/Algebra/sections/2019-08-15.md
@@ -23,7 +23,7 @@ The following definitions will be useful to know by heart:
 - Transposition
 - Orbit
 - Cycle
-- The symmetric group $S^{n}$
+- The symmetric group $S_{n}$
 - The alternating group $A_{n}$
 - Even and odd permutations
 - Cosets
